# DeepNeuralSamplers

./: .gitignore  README.md  pyproject.toml
runs_Rings/GF/run_4_1.0_0.15_sig1.0_p2.0/checkpoint_199999/: action_metrics.csv
runs_Rings/GF/run_4_1.0_0.15_sig1.0_p2.0/checkpoint_399999/: action_metrics.csv
runs_Rings/Learned/FIRST_run_4_1.0_0.15_sig5.0_p2.0/checkpoint_1999/: action_metrics.csv
runs_Rings/Learned/FIRST_run_4_1.0_0.15_sig5.0_p2.0/checkpoint_3999/: action_metrics.csv
runs_Rings/Learned/FIRST_run_4_1.0_0.15_sig5.0_p2.0/checkpoint_7999/: action_metrics.csv
runs_Rings/Learned/run_4_1.0_0.15_sig1.0_p2.0/checkpoint_19999/: action_metrics.csv
runs_Rings/Learned/run_4_1.0_0.15_sig1.0_p2.0/final_run_4_1.0_0.15_sig1.0_p2.0/: action_metrics.csv
runs_Rings/Learned/run_4_1.0_0.15_sig2.0_p2.0/checkpoint_19999/: action_metrics.csv
runs_Rings/Learned/run_4_1.0_0.15_sig2.0_p2.0/final_run_4_1.0_0.15_sig2.0_p2.0/: action_metrics.csv
runs_Rings/Learned/run_4_1.0_0.15_sig5.0_p2.0/checkpoint_19999/: action_metrics.csv
runs_Rings/Learned/run_4_1.0_0.15_sig5.0_p2.0/final_run_4_1.0_0.15_sig5.0_p2.0/: action_metrics.csv
src/: __init__.py  compute_action_direct.py  default_factories.py  eval_utils.py  evaluation.py  flow_wrappers.py  loss.py  models.py  run_all_variants.py  trainer.py
src/configs/: Funnel_configs.py  GMM_configs.py  Rings_configs.py  __init__.py  base_config.py
src/fab/target_distributions/: asymmetric_gmm.py  funnel.py  rings.py
src/fab/utils/: funnel_eval.py  funnel_plotting.py  numerical.py  plotting.py  utils.py
(+29 files in other folders)
